# cpp-reflect

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
clang/: CMakeLists.txt
clang/plugins/reflector_plugin/: ASTConsumer.h  CMakeLists.txt  reflector_plugin.cpp
docs/: Doxyfile  header.html  layout.xml
docs/assets/: overrides.css
docs/pages/: Contexts.md
src/: _types.cppm  accessors.cppm  any.cppm  archive.cppm  equality.cppm  pretty_print.cppm  refl.cppm  type_info.cppm  type_name.cppm  visitor.cppm
src/serialization/: format_base.cppm  serializer.cppm
src/serialization/formats/: default.cppm  json.cppm
test/: refl.cpp  serialize.cpp
